# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter-check.yml
brain_games/: brain_cli.py  brain_games_core.py  cli.py  core.py  games_support.py
brain_games/games/: calc.py  calc_game.py  even.py  even_game.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
