[tool.poetry]
name = "python-project-lvl1"
version = "0.1.0"
description = " Hexlet project (lvl-1)- Brain Game - You will check your mind! Come in! "
authors = ["Maksim <mvlasov1977@gmail.com>"]
packages = [ { include = "brain_games" }, ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Freeware",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6",
    "Topic :: Games/Entertainment :: Brain-Games"    
]
repository = "https://github.com/mvlasov1977/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
